# flock

./: .gitignore  .gitmodules  Cargo.toml
flock-api/: Cargo.toml
flock-api/src/: lib.rs  message.rs
flock-camera-sensor/: Cargo.toml  sdkconfig.defaults
flock-camera-sensor/.cargo/: config.toml
flock-camera-sensor/src/: main.rs
flock-camera-sensor/src/camera/: camera.rs  mod.rs  sensor.rs
flock-controller/: Cargo.toml
flock-controller/src/: main.rs
